# unrusty

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: add.rs  cat_file.rs  hash_object.rs  init.rs  main.rs  tools.rs
src/add/: add_cmd.rs  add_do.rs  add_parse.rs
src/cat_file/: cat_file_cmd.rs  cat_file_do.rs  cat_file_parse.rs
src/hash_object/: hash_object_cmd.rs  hash_object_parse.rs
src/init/: init_cmd.rs  init_do.rs  init_parse.rs
src/tools/: db.rs  failed.rs  index.rs  path.rs
