[package]
name = "unrusty"
version = "0.1.0"
authors = ["simonm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.14"
sha-1 = "0.8.2"
hex = "0.3.1"
docopt = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
thiserror = "1.0.20"
regex = "1.4.2"
lazy_static = "1.4.0"
env_logger = "0.8.2"
log = "0.4.11"
